# AUTH-MCP-REMOTE

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
model/: UserInfo.py
scripts/: get_gmail_refresh_token.py
utils/: auth.py  gmail.py
